--- a/bio.html
+++ b/bio.html
@@ -1,7 +1,7 @@
 	<!DOCTYPE html>
 	<html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="file path">
+		<link rel="stylesheet" type="text/css" href="CSS/biostyle.css"></hlink>
 		<title>Cole Martin</title>
 	</head>
 	<body>
