--- a/bio.html
+++ b/bio.html
@@ -7,6 +7,6 @@
 	<body>
 	<h1>Cole Martin in Depth</h1>
 	<h3>Son, Brother, Friend</h3>
-	<p>My favorite website has to be <a href="https://www.youtube.com/"></a></p>
+	<p>My favorite website has to be <a href="https://www.youtube.com/blank"></a></p>
 	</body>
 	</html>
