--- a/bio.html
+++ b/bio.html
@@ -8,5 +8,6 @@
 	<h1>Cole Martin in Depth</h1>
 	<h3>Son, Brother, Friend</h3>
 	<p>My favorite website I visit is <a href="https://www.youtube.com">YouTube</a></p>
+	<img src="Images/Chungus.jpg">
 	</body>
 	</html>
