--- a/bio.html
+++ b/bio.html
@@ -5,9 +5,26 @@
 		<title>Cole Martin</title>
 	</head>
 	<body>
-	<h1>Cole Martin in Depth</h1>
-	<h3>Son, Brother, Friend</h3>
-	<p>My favorite website I visit is <a href="https://www.youtube.com">YouTube</a></p>
-	<img src="Images/Chungus.jpg">
+	<div class="wrapper">
+<h1 class="name">Classic Cole Martin</h1>
+<h2 class="namesub">Son, Brother, Friend, Student</h2>
+	
+	<section><h3 class="numberone">Cole Martin: The Friend</h3>
+	<p class="friendp">I have lived in many places during my lifetime. Being a nomadic person, I have developed many good friendships. I am very approachable, trustworthy person, which allows the skills to make friends. All though it is hard to maintain long distance friendship, with social media it makes it easier to stay in contact. I still will dm, text, or snapchat many of the friends I have made. </p>
+	<img src="Images/Santa.jpg"> <img src="Images/Preston.jpg"></section>
+	<h3 class="numbertwo">Cole Martin: The Son</h3>
+	<p class="sonp">I am the only boy in my family, making me the only son. I am the greatest son in the world because I am family man. I hang out with my sisters, playing minecraft and numerous other video games. I devoted time in my day to my parents and sit down and chat with them. I am the best son in my family, which is a hard competition to lose.</p>
+	<img src="Images/1575.jfif"> <img src="Images/1577.jfif">
+	<h3 class="numberthree">Cole Martin: The Student </h3>
+	<p class="studentp">I attend St Joseph's Catholic School. I am always about getting good grades and developing my academic skills. I like to go to school to hang out with friends, as well as attend social activites, like dances. I am very active in extra curricular activites, like Youth in Government. After I graduate, I intend to go to college.</p>
+	<img src="Images/91.jpg"> <img src="Images/92.jpg">
+	<h3 class="numberfour">Cole Martin: The Brother</h3>
+	<p class="brotherp">I have stated previously in the Cole Martin: The Son section, that I am a family man. I enjoying hanging out with my sister and look out for them all the time. Many people haved told me how lucky my sisters are to have me as a big brother. Yes, my sisters and do not get along all the time, but most of the time we do. Many activites we do together include video games, board games, skate boarding and many more.</p>
+	<img src="Images/1547.jfif"> <img src="Images/1583.jfif">
+	</div>
+	<footer>
+		<p>Copyright: Cole Martin</p>
+		<p>Last Updated: January 28, 2019</p>
+	</footer>
 	</body>
 	</html>
