--- a/bio.html
+++ b/bio.html
@@ -6,6 +6,13 @@
 	</head>
 	<body>
 	<div class="wrapper">
+		<div class="wrapper2">
+			<nav>
+				<a href="top10.html" target="_blank"> TOP10 </a>
+				<a href="quiz1.html"target="_blank"> QUIZ1 </a>
+				<a href="index.html" target="_blank"> HOME PAGE</a>
+		</nav>
+	</div>
 <h1 class="name">Classic Cole Martin</h1>
 <h2 class="namesub">Son, Brother, Friend, Student</h2>
 	
