--- a/bio.html
+++ b/bio.html
@@ -11,6 +11,7 @@
 				<a href="top10.html" target="_blank"> TOP10 </a>
 				<a href="quiz1.html"target="_blank"> QUIZ1 </a>
 				<a href="index.html" target="_blank"> HOME PAGE</a>
+				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHN</a>
 		</nav>
 	</div>
 <h1 class="name">Classic Cole Martin</h1>
