--- a/bio.html
+++ b/bio.html
@@ -8,10 +8,12 @@
 	<div class="wrapper">
 		<div class="wrapper2">
 			<nav>
-				<a href="index.html" target="_blank"> HOME PAGE</a>
+			<a href="index.html" target="_blank"> HOME PAGE</a>
 				<a href="top10.html" target="_blank"> TOP10 </a>
 				<a href="quiz1.html"target="_blank"> QUIZ1 </a>
+				<a href="bio.html" target="_blank"> BIO </a>
 				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHN</a>
+				<a href="recipe.html" target="_blank"> RECIPE</a>
 		</nav>
 	</div>
 <h1 class="name">Classic Cole Martin</h1>
@@ -25,7 +27,7 @@
 	<img src="Images/1575.jfif"> <img src="Images/1577.jfif">
 	<h3 class="numberthree">Cole Martin: The Student </h3>
 	<p class="studentp">I attend St Joseph's Catholic School. I am always about getting good grades and developing my academic skills. I like to go to school to hang out with friends, as well as attend social activites, like dances. I am very active in extra curricular activites, like Youth in Government. After I graduate, I intend to go to college.</p>
-	<img src="Images/91.jpg"> <img src="Images/92.jpg">
+	<img src="Images/Cole.jpg"> <img src="Images/92.jpg">
 	<h3 class="numberfour">Cole Martin: The Brother</h3>
 	<p class="brotherp">I have stated previously in the Cole Martin: The Son section, that I am a family man. I enjoying hanging out with my sister and look out for them all the time. Many people haved told me how lucky my sisters are to have me as a big brother. Yes, my sisters and do not get along all the time, but most of the time we do. Many activites we do together include video games, board games, skate boarding and many more.</p>
 	<img src="Images/1547.jfif"> <img src="Images/1583.jfif">
