--- a/bio.html
+++ b/bio.html
@@ -8,15 +8,17 @@
 	<div class="wrapper">
 		<div class="wrapper2">
 			<nav>
-				<a href="index.html" target="_blank"> HOME PAGE</a>
+				<a href="index.html" target="_blank"> HOMEPAGE</a>
 				<a href="top10.html" target="_blank"> TOP10 </a>
 				<a href="quiz1.html"target="_blank"> QUIZ1 </a>
 				<a href="bio.html" target="_blank"> BIO </a>
-				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHN</a>
+				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHAN</a>
 				<a href="recipe.html" target="_blank"> RECIPE</a>
 				<a href="gallery.html" target="_blank"> POLAROID GALLERY</a>
-		</nav>
-		</nav>
+				<a href="mondrian.html" target="_blank"> MONDRIAN </a>
+		</nav>	
+				
+		
 	</div>
 <h1 class="name">Classic Cole Martin</h1>
 <h2 class="namesub">Son, Brother, Friend, Student</h2>
